--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,4 +4,4 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-interprete-rs-derive  = { path = "./interprete-rs-derive" }
+interprete-rs-macros  = { path = "./interprete-rs-macros" }
